k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: platform-ops-api
  namespace: portfolio
  labels:
    app: platform-ops-api
spec:
  type: ClusterIP
  selector:
    app: platform-ops-api
  ports:
    - name: http
      protocol: TCP
      port: 80
      targetPort: http
